# minutes

./: .gitignore  .mcpbignore  BUILD-STATUS.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  TODOS.md  manifest.json  manifest.mcpb.json
.agents/: napkin.md
.claude-plugin/: marketplace.json
.claude/plugins/minutes/: plugin.json
.github/workflows/: ci.yml  release-windows-desktop.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/src/: calendar.rs  capture.rs  config.rs  diarize.rs  health.rs  lib.rs  markdown.rs  notes.rs  pipeline.rs  screen.rs  summarize.rs  transcribe.rs
crates/mcp/: package-lock.json  package.json
crates/mcp/src/: index.ts
crates/mcp/ui/: index.html
crates/mcp/ui/src/: mcp-app.ts  (+1 more)
crates/whisper-guard/src/: audio.rs  segments.rs
docs/: COWORK-RESEARCH.md  RELEASE-CHANNELS.md
integrations/claude-cowork-extension/: package.json
plugin/.claude-plugin/: plugin.json
plugin/agents/: meeting-analyst.md
plugin/hooks/: hooks.json  post-record.mjs  session-reminder.mjs
plugin/hooks/test/: post-record.test.mjs
plugin/skills/minutes-cleanup/: SKILL.md
plugin/skills/minutes-debrief/: SKILL.md
plugin/skills/minutes-list/: SKILL.md
plugin/skills/minutes-note/: SKILL.md
plugin/skills/minutes-prep/: SKILL.md
scripts/: reinstall.sh
site/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
site/app/: globals.css  layout.tsx  page.tsx
site/components/: copy-button.tsx  demo-player.tsx  minutes-demo.tsx
site/public/: llms.txt
tauri/src/: index.html
tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
tauri/src-tauri/src/: call_detect.rs  commands.rs  main.rs
tests/integration/: pipeline_test.rs
(+14 files in other folders)
