[package]
name = "minutes-app"
version = "0.1.0"
edition = "2021"
description = "Minutes — menu bar app for conversation memory"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
minutes-core = { path = "../../crates/core", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }
